--- a/config.json
+++ b/config.json
@@ -12,19 +12,19 @@
 	"host": "localhost:514"
     },
 
-    "__comment__": "To enable the following fields, remove the preceding '__'",
+    "__comment__": "To modify the settings below, remove the preceding '__'",
 
     "__adminUsername": "username",
     "__password": "password",
     "__passwordFile": "passwordFile",
 
     "__fields": ["field1", "field2", "field3"],
-    "__namespaceSet": ["dbx9.agenda.a", "dby.agendaitems.a"],
-    "__destMapping": {"source1": "dest1", "source2":"dest2"},
+    "__namespaceSet": ["test.source1", "test.source2"],
+    "__destMapping": {"test.source1": "test.dest1", "test.source2": "test.dest2"},
 
     "docManagers": [
 	{
-	    "docManager": "/Users/xmasotto/coding/mongo-connector/mongo_connector/doc_managers/elastic_doc_manager.py",
+	    "docManager": "mongo_connector/doc_managers/elastic_doc_manager.py",
 	    "targetURL": "localhost:9200",
 	    "uniqueKey": "_id",
 	    "autoCommitInterval": null
