--- a/config.json
+++ b/config.json
@@ -1,12 +1,13 @@
 {
-    "__comment__": "Configuration options starting with '__' are disabled"
-    "__comment__": "To enable them, remove the preceding '__'"
+    "__comment__": "Configuration options starting with '__' are disabled",
+    "__comment__": "To enable them, remove the preceding '__'",
 
     "mainAddress": "localhost:27017",
     "oplogFile": "oplog.timestamp",
     "noDump": false,
     "batchSize": -1,
     "verbosity": 0,
+    "continueOnError": true,
 
     "__logging": {
 	"type": "file",
@@ -19,16 +20,15 @@
 
     "__authentication": {
 	"adminUsername": "username",
-
 	"password": "password",
-	"__passwordFile": "passwordFile"
+	"passwordFile": null
     },
 
     "__fields": ["field1", "field2", "field3"],
 
     "__namespaces": {
 	"include": ["db.source1", "db.source2"],
-	"map": {
+	"mapping": {
 	    "db.source1": "db.dest1",
 	    "db.source2": "db.dest2"
 	}
